--- a/css/main.css
+++ b/css/main.css
@@ -77,7 +77,7 @@ div.content
     font-size: 18px;
     font-weight: 300;
 
-    color: #777;
+    color: #cfd8dc;
 }
 .copyright
 {
@@ -202,7 +202,7 @@ h3.intro
 }
 a.meta
 {
-    color: #966;
+    color: #b3e5fc;
 }
 h6.meta
 {
